src/test/deca/syntax/invalid/multistring-in-print.deca
// Description:
//    Test d'affichage des caractères spéciaux
//
// Resultats:
//   erreur parser 11
//
// Historique:
//    cree le 01/01/2024

{
    println("jesuisuntroll\njesuisuntroll");
}
